--- a/Fooddelivery/style.css
+++ b/Fooddelivery/style.css
@@ -33,13 +33,13 @@ main {
 
 .dish {
     background-color: white;
-    margin: 0;
-    padding: 0;
+    margin: 10px;
+    padding: 15px;
     border-radius: 5px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
     text-align: center;
     flex-basis:22%;
-    max-width:280px;
+    max-width:300px;
     height:auto;
 }
 
