--- a/Fooddelivery/style.css
+++ b/Fooddelivery/style.css
@@ -52,7 +52,7 @@ main {
 }
 
 button {
-    background-color: #ff4d4d;
+    background-color: black;
     color: white;
     border: none;
     padding: 5px;
