--- a/Fooddelivery/style.css
+++ b/Fooddelivery/style.css
@@ -19,28 +19,29 @@ header {
 main {
     flex:1;
     display: flex;
-    flex-wrap:wrap;
-    justify-content: space-between;
-    padding: 20px;
+    padding:20px;
+    flex-direction: column; 
+    align-items: center;    
+    gap:20px;
 }
 
 #menu {
     display:flex;
-    flex-wrap:wrap;
-    justify-content:space-around;
-    gap:10px;
+    flex-direction: column;
+    align-items:center;
+    gap:20px;
 }
 
 .dish {
     background-color: white;
     margin: 10px;
-    padding: 15px;
-    border-radius: 5px;
+    padding: 20px;
+    border-radius: 10px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
     text-align: center;
-    flex-basis:22%;
-    max-width:300px;
-    height:auto;
+    width:100%;
+    max-width:600px;
+   
 }
 
 .dish img {
@@ -66,11 +67,12 @@ button:hover {
 }
 
 #cart {
-    width: 30%;
+    width: 100%;
     background-color: white;
     padding: 20px;
-    border-radius: 8px;
+    border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width:600px
 }
 
 #cartItems {
