--- a/Fooddelivery/style.css
+++ b/Fooddelivery/style.css
@@ -20,14 +20,15 @@ main {
     flex:1;
     display: flex;
     padding:20px;
-    flex-direction: column; 
-    align-items: center;    
+    flex-direction: row; 
+    align-items: center;    
+
     gap:20px;
 }
 
 #menu {
     display:flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items:center;
     gap:20px;
 }
