--- a/microblogging/style.css
+++ b/microblogging/style.css
@@ -12,10 +12,17 @@ h2 {
     margin-bottom: 20px;
 }
 
-textarea {
+input[type="text"], textarea {
     width: 100%;
-    height: 60px;
     margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+textarea {
+    height: 60px;
 }
 
 .post {
@@ -56,6 +63,9 @@ button:hover {
 
 #user-list div {
     margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 #user-list button {
@@ -64,6 +74,7 @@ button:hover {
     color: #007bff;
     cursor: pointer;
     padding: 0;
+    font-size: 16px;
 }
 
 #user-list button:hover {
@@ -74,4 +85,9 @@ small {
     display: block;
     margin-top: 5px;
     color: #666;
+}
+
+textarea:focus, input[type="text"]:focus {
+    outline: none;
+    border-color: #007bff;
 }
