--- a/microblogging/style.css
+++ b/microblogging/style.css
@@ -104,3 +104,9 @@ button {
     display: block;
     margin: 10px 0; /* Adds some space between the image and other elements */
 }
+
+.like-btn, .dislike-btn, .delete-btn, .comment-like-btn {
+    background-color: #007bff;
+    color: white;
+    margin-right: 10px; /* Added margin to create space between buttons */
+}
