--- a/microblogging/style.css
+++ b/microblogging/style.css
@@ -125,7 +125,9 @@ button {
     border-radius: 8px;
     margin: 10px 0; /* Spacing between user profiles */
     display: flex; /* Display user profile and follow button in one row */
-    justify-content: space-between; /* Space between the name and button */
+    justify-content: flex-end; /* Space between the name and button */
+    width:100%;
+    height: auto;
     align-items: center; /* Align vertically */
 }
 
