--- a/microblogging/style.css
+++ b/microblogging/style.css
@@ -88,6 +88,7 @@ button:hover {
 }
 
 .comment-like-btn {
+    background-color: none;
     background: transparent;
     border: none;
     cursor: pointer;
