--- a/Fooddelivery/style.css
+++ b/Fooddelivery/style.css
@@ -7,7 +7,7 @@
 
 /* Header styles */
 header {
-    background-color: #ff5722; /* Orange color */
+    background-color: black; /* Orange color */
     color: white;
     text-align: center;
     padding: 20px 0;
