--- a/Fooddelivery/style.css
+++ b/Fooddelivery/style.css
@@ -107,7 +107,7 @@ nav ul li:hover {
 }
 .menu {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     overflow-x: auto;
     gap: 20px;
     justify-content: center;
