--- a/Fooddelivery/style.css
+++ b/Fooddelivery/style.css
@@ -122,7 +122,7 @@ nav ul li:hover {
     text-align: center;
     padding: 15px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     box-sizing: border-box;
 }
