--- a/Fooddelivery/style.css
+++ b/Fooddelivery/style.css
@@ -86,10 +86,12 @@ section {
     cursor: pointer;
 }
 
-.add-to-cart-btn:hover, .view-menu-btn:hover, .proceed-btn:hover {
+.add-to-cart-btn:hover, .view-menu-btn:hover {
     background-color: #555;
 }
-
+.proceed-btn:hover {
+    background-color:green;
+}
 .cart-item {
     border: 1px solid #ccc;
     margin: 10px;
