--- a/Fooddelivery/style.css
+++ b/Fooddelivery/style.css
@@ -78,7 +78,14 @@ section {
     height: auto;
 }
 
-.add-to-cart-btn, .view-menu-btn, .proceed-btn {
+.add-to-cart-btn, .view-menu-btn, {
+    background-color: black;
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+}
+.proceed-btn {
     background-color: black;
     color: white;
     border: none;
