--- a/Fooddelivery/style.css
+++ b/Fooddelivery/style.css
@@ -57,7 +57,7 @@ section {
     width: 100px;
     height: 100px;
     margin-right: 20px;
-    align-items:center;
+    text-align:center;
 }
 
 .menu-item {
