--- a/Fooddelivery/style.css
+++ b/Fooddelivery/style.css
@@ -38,6 +38,7 @@ section {
     display: flex;
     align-items: center;
     margin-top: 20px;
+    text-align: center; 
 }
 
 .restaurant-about-img {
