--- a/classifieds Web/style.css
+++ b/classifieds Web/style.css
@@ -39,7 +39,7 @@ header button {
 
 .breadcrumb {
     font-weight: bold;
-    font-color: white;
+    font-color: #f4f4f4;
 }
 
 /* Hidden Class */
