--- a/classifieds Web/style.css
+++ b/classifieds Web/style.css
@@ -34,7 +34,7 @@ header button {
     max-width: 600px;
     padding: 10px;
     font-size: 1rem;
-    font-color: white;
+    font-color: #f1f1f1;
 }
 
 .breadcrumb {
